[package]
name = "pairwise-kmers"
version = "0.0.1"
rust-version = "1.61.0"
edition = "2021"

[[bin]]
name = "pairwise-kmers"
path = "src/main/rust/main.rs"

[dependencies]
clap = { version = "4.1", features = ["derive"]}
deadqueue = "0.2.4"
env_logger = "0.9"
futures = "0.3.28"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "signal", "sync", "time"]}
